--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- VUE JS -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
+  <!-- BOOTSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 
@@ -16,14 +19,20 @@
 <body>
 
   <div id="app">
-    <div class="main-container">
+    <div class="main-container py-5">
 
+      <div class="container text-center text-white d-flex flex-column">
 
-      <h1>{{ message }}</h1>
+        <h1 class="text-danger py-5 fw-bold">{{ message }}</h1>
 
-      <img :src='imgClock'>
+        <h2 :class="{'red': !(countDown % 2)}" class="fs-1 py-5">{{ countDown }}</h2>
+
+        <img class="py-5" :src='imgClock'>
+
+        <span @click="restart()" class="btn btn-danger">Restart</span>
+
+      </div>
     </div>
-
 
   </div>
 
